# comprehensive-rust

./: .pre-commit-config.yaml  Cargo.toml
10.7_elevator_events/src/: main.rs
12.6_expression_evaluation/src/: lib.rs  main.rs
13.4_generic_logger/: Cargo.toml
13.4_generic_logger/src/: main.rs
14.7_generic_min/src/: lib.rs  main.rs
16.8_counter/src/: main.rs
17.7_rot_thirteen/: Cargo.toml
17.7_rot_thirteen/src/: lib.rs  main.rs
18.4_log_filter/src/: main.rs
20.8_builder_type/src/: main.rs
21.4_binary_tree/src/: lib.rs
23.5_health_statistics/src/: lib.rs
24.4_protobuf_parsing/src/: lib.rs
26.6_iterator_chaining/: Cargo.toml
26.6_iterator_chaining/src/: lib.rs
27.6_gui_modules/src/: main.rs  widgets.rs
27.6_gui_modules/src/widgets/: button.rs  label.rs  mod.rs  window.rs
28.4_luhn_algorithm/src/: lib.rs
30.8_result_rewrite/: Cargo.toml
30.8_result_rewrite/src/: lib.rs
31.7_safe_ffi_wrapper/: Cargo.toml  instructions.md
31.7_safe_ffi_wrapper/src/: main.rs
5.6_fibonacci/src/: main.rs
6.8_collatz/src/: main.rs
62.1_dining_philosophers/src/: main.rs
62.2_threaded_link_checker/: Cargo.toml
62.2_threaded_link_checker/src/: main.rs
67.1_dining_philosophers_async/: Cargo.toml
67.1_dining_philosophers_async/src/: main.rs
67.2_chat_async/: Cargo.toml  instructions.md
8.5_nested_arrays/src/: main.rs
9.6_geometry/src/: main.rs
