[workspace]
resolver = "2"
members = [
    "5.6_fibonacci",
    "6.8_collatz",
    "8.5_nested_arrays",
    "9.6_geometry",
    "10.7_elevator_events",
    "12.6_expression_evaluation",
    "13.4_generic_logger",
    "14.7_generic_min",
    "16.8_counter",
    "17.7_rot_thirteen",
    "18.4_log_filter",
    "20.8_builder_type",
    "21.4_binary_tree",
    "23.5_health_statistics",
]
